--- a/src/main/resources/assets/soar/languages/cn.lang
+++ b/src/main/resources/assets/soar/languages/cn.lang
@@ -318,6 +318,8 @@ setting.opacity=不透明度
 setting.opacity.description=设置不透明度
 setting.left=左
 setting.right=右
+
+#fakefps mod
 setting.fakefps.mode=假帧率模式
 setting.fakefps.mode.description=设置假帧率模式
 setting.fakefps.multiplier=假帧率倍率
@@ -328,6 +330,16 @@ setting.fakefps.mode.real=真实帧率
 setting.fakefps.mode.multiplied=倍率帧率
 setting.fakefps.mode.random=随机帧率
 setting.fakefps.mode.fixed=固定帧率
+
+#auto gg mod
+setting.delay=延迟
+setting.delay.description=设置延迟
+setting.message=消息
+setting.message.description=设置消息
+setting.hypixel=Hypixel
+setting.hypixel.description=Hypixel
+setting.hypixel.mode=Hypixel模式
+setting.hypixel.mode.description=设置Hypixel模式
 
 language.english=English
 language.chinese=中文
